--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             <li>Career</li>
             <li>Contact</li>
         </ul>
+        <div class="copright">
+        <h5 class="copy"> Copyright &copy; 2021 Charith-Chandan</h5>
+    </div>
     </div>
 </footer>
 </body>
